--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "build:netlify-prod": "NODE_ENV=production webpack --config webpack.netlify.config.js",
     "clean": "gatsby clean",
     "create-pages": "node ./scripts/create-pages.js",
+    "delete-pages": "node ./scripts/delete-pages.js",
     "develop": "gatsby develop",
     "lint": "eslint src/",
     "lint:changed": "eslint",
