--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
       "cardano"
     ],
     "ga": {
-      "trackingId": null
+      "trackingID": null
     },
     "localization": {
       "createLocalizedPages": true,
