--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.4",
   "author": "Lewis Nelson <lewis.nelson@iohk.io>",
   "dependencies": {
+    "@hot-loader/react-dom": "^16.13.0",
     "@input-output-hk/front-end-core-components": "^1.0.6",
     "@input-output-hk/front-end-core-libraries": "^1.2.0",
     "@input-output-hk/front-end-site-components": "^1.2.0",
